Ensure file inputs don't overflow off the screen

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -26,6 +26,10 @@ input[type='submit'] {
     }
 }
 
+input[type='file'] {
+    width: 100%;
+}
+
 .decision-buttons {
     > div {
         float: left;
